--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1171.0",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "multer": "^1.4.5-lts.1"
   }
 }
